force-app/main/default/objects/Contact_Enrollment__c/Contact_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Contact Enrollment</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Contact Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>