force-app/main/default/objects/Contact_Enrollment__c/fields/Assigned_Seat__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Seat__c</fullName>
    <label>Assigned Seat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>