force-app/main/default/objects/Contact_Enrollment__c/fields/Certificate_Id__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Id__c</fullName>
    <label>Certificate Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>