force-app/main/default/objects/Contact_Enrollment__c/fields/Certificate_Url__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Url__c</fullName>
    <formula
  >IF(Certificate_Id__c=&quot;&quot;, &quot;&quot;, &quot;https://lms.govtech.com/api/rest/v2/my-certificates/&quot; &amp;  Certificate_Id__c &amp; &quot;/pdf&quot;)</formula>
    <label>Certificate Url</label>
    <type>Text</type>
</CustomField>