force-app/main/default/objects/Contact_Enrollment__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <description>Allows group % calculations in reports.</description>
    <formula>NOT(
ISNULL(Completed_Date__c)
)</formula>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>