force-app/main/default/objects/Contact_Enrollment__c/fields/Completed_Score__c.field-meta.xml
<CustomField>
    <fullName>Completed_Score__c</fullName>
    <description
  >To enable the score to be shown only for completed courses.</description>
    <formula>IF(
  NOT(
    ISBLANK(
       Completed_Date__c 
    )
  ),
   Score__c/100 ,
  NULL
)</formula>
    <label>Completed Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>