force-app/main/default/objects/Contact_Enrollment__c/fields/Completion_Progress__c.field-meta.xml
<CustomField>
    <fullName>Completion_Progress__c</fullName>
    <formula>IF(
  AND(
    Percent_Complete__c &gt;0,
    Percent_Complete__c &lt; 0.255
  ),
  &quot;1% - 25%&quot;,
  IF(
    AND(
      Percent_Complete__c &gt;= 0.255,
      Percent_Complete__c &lt; 0.505
    ),
    &quot;26% - 50%&quot;,
    IF(
      AND(
        Percent_Complete__c &gt;= 0.505,
        Percent_Complete__c &lt; 0.755
      ),
      &quot;51% - 75%&quot;,
      IF(
        AND(
          Percent_Complete__c &gt;= 0.755,
          Percent_Complete__c &lt; 1.0
        ),
        &quot;76% - 99%&quot;,
        IF(
          Percent_Complete__c &gt;= 1.0,
          &quot;Complete&quot;,
          NULL
        )
      )
    )
  )
)</formula>
    <label>Completion Progress</label>
    <type>Text</type>
</CustomField>