force-app/main/default/objects/Contact_Enrollment__c/fields/Contact_Enrollment_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Contact_Enrollment_ID_Case_Safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Enrollment ID (Case-Safe)</label>
    <type>Text</type>
</CustomField>