force-app/main/default/objects/Contact_Enrollment__c/fields/Contact_Enrollment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Enrollment_Notes__c</fullName>
    <inlineHelpText
  >Notes related to the course enrollment activity for learner.</inlineHelpText>
    <label>Contact Enrollment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>