force-app/main/default/objects/Contact_Enrollment__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipName>Contact_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>