force-app/main/default/objects/Contact_Enrollment__c/fields/Course_Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Course_Account_Owner_Email__c</fullName>
    <description
  >Used for Course Survey Completed Emails, only populated when a Course Survey is completed.</description>
    <inlineHelpText
  >Used for Course Survey Completed Emails, only populated when a Course Survey is completed.</inlineHelpText>
    <label>Course Account Owner Email</label>
    <type>Email</type>
</CustomField>