force-app/main/default/objects/Contact_Enrollment__c/fields/Course_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Activation_Date__c</fullName>
    <formula>Course_Enrollment__r.Course_Enrollment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Activation Date</label>
    <type>Date</type>
</CustomField>