force-app/main/default/objects/Contact_Enrollment__c/fields/Course_Department__c.field-meta.xml
<CustomField>
    <fullName>Course_Department__c</fullName>
    <formula>Contact__r.Absorb_Department__c</formula>
    <label>Course Department</label>
    <type>Text</type>
</CustomField>