force-app/main/default/objects/Contact_Enrollment__c/fields/Course_Email__c.field-meta.xml
<CustomField>
    <fullName>Course_Email__c</fullName>
    <formula>Contact__r.Absorb_Email__c</formula>
    <label>Course Email</label>
    <type>Text</type>
</CustomField>