force-app/main/default/objects/Contact_Enrollment__c/fields/Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrollment__c</fullName>
    <label>Course Enrollment</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipName>Contact_Enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>