force-app/main/default/objects/Contact_Enrollment__c/fields/Course_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Course_Nickname__c</fullName>
    <formula>Course_Enrollment__r.Course_Nickname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Nickname</label>
    <type>Text</type>
</CustomField>