force-app/main/default/objects/Contact_Enrollment__c/fields/Credly_Badge_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Credly_Badge_Sent_Date__c</fullName>
    <label>Credly Badge Sent Date</label>
    <type>Date</type>
</CustomField>