force-app/main/default/objects/Contact_Enrollment__c/fields/Date_Expires__c.field-meta.xml
<CustomField>
    <fullName>Date_Expires__c</fullName>
    <label>Date Expires</label>
    <type>Date</type>
</CustomField>