force-app/main/default/objects/Contact_Enrollment__c/fields/Date_First_Accessed__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Accessed__c</fullName>
    <label>Date First Accessed</label>
    <type>Date</type>
</CustomField>