force-app/main/default/objects/Contact_Enrollment__c/fields/Date_Last_Accessed__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Accessed__c</fullName>
    <label>Date Last Accessed</label>
    <type>Date</type>
</CustomField>