force-app/main/default/objects/Contact_Enrollment__c/fields/Enrollment_Key_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Key_Sent_Date__c</fullName>
    <label>Enrollment Key Sent Date</label>
    <type>Date</type>
</CustomField>