force-app/main/default/objects/Contact_Enrollment__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >The Date Expires passed before the course was completed.</description>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>