force-app/main/default/objects/Contact_Enrollment__c/fields/External_Course_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Course_Id__c</fullName>
    <formula>Course__r.External_Course_Id__c</formula>
    <label>External Course Id</label>
    <type>Text</type>
</CustomField>