force-app/main/default/objects/Contact_Enrollment__c/fields/External_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Enrollment_Id__c</fullName>
    <formula
  >Contact__r.Absorb_Username__c  &amp; Course__r.External_Course_Id__c</formula>
    <label>External Enrollment Id</label>
    <type>Text</type>
</CustomField>