force-app/main/default/objects/Contact_Enrollment__c/fields/External_Enrollment_Id_Unique__c.field-meta.xml
<CustomField>
    <fullName>External_Enrollment_Id_Unique__c</fullName>
    <description
  >A copy of the External Enrollment Id to ensure that the Id is Unique across contact enrollments.</description>
    <label>External Enrollment Id (Unique)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>