force-app/main/default/objects/Contact_Enrollment__c/fields/Last_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Last_Logged_In__c</fullName>
    <label>Last Logged In</label>
    <type>Date</type>
</CustomField>