force-app/main/default/objects/Contact_Enrollment__c/fields/Learner_Status__c.field-meta.xml
<CustomField>
    <fullName>Learner_Status__c</fullName>
    <formula>IF(

  TEXT(Status__c )=&quot;Unenrolled&quot;, 

       &quot;Unenrolled&quot;, 

  IF(OR(TEXT(Assigned_Seat__c)=&quot;Deactivated&quot;,
          TEXT(Status__c )=&quot;Deactivated&quot;), 

       &quot;Deactivated&quot;, 

  IF(TEXT(Status__c )=&quot;Complete&quot;, 

       &quot;Complete&quot;, 

  IF(Expired__c=True, 

       &quot;Expired&quot;, 

  IF( ISNULL(Date_Last_Accessed__c) = True, 

       &quot;Assigned&quot;, 

       Text(Status__c)
) 
) 
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learner Status</label>
    <type>Text</type>
</CustomField>