force-app/main/default/objects/Contact_Enrollment__c/fields/Learner_Type__c.field-meta.xml
<CustomField>
    <fullName>Learner_Type__c</fullName>
    <label>Learner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Premium Seat</fullName>
            </value>
            <value>
                <fullName>Comp</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>External LMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>