force-app/main/default/objects/Contact_Enrollment__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula
  >IF(CONTAINS(Course_Nickname__c,&quot;SLG&quot;), &quot;State &amp; Local Government&quot;, 
  
    IF(CONTAINS(Course_Nickname__c,&quot;HED&quot;), &quot;Higher Education IT leaders&quot;, 

       IF(CONTAINS(Course_Nickname__c,&quot;K12&quot;), &quot;K-12 Education IT leaders&quot;, 

          IF(CONTAINS(Course_Nickname__c,&quot;K20&quot;), &quot;Education IT leaders&quot;, 

             &quot;&quot;

             )
          )
       ) 
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays the Market for SLG, K12, HED, and K20 courses.</inlineHelpText>
    <label>Market</label>
    <type>Text</type>
</CustomField>