force-app/main/default/objects/Contact_Enrollment__c/fields/Number_of_Times_Accessed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Accessed__c</fullName>
    <label># of Times Accessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>