force-app/main/default/objects/Contact_Enrollment__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>