force-app/main/default/objects/Contact_Enrollment__c/fields/Q1_Did_this_course_meet_your_exp__c.field-meta.xml
<CustomField>
    <fullName>Q1_Did_this_course_meet_your_exp__c</fullName>
    <description
  >Course custom question #1: Did this course meet your expectations?</description>
    <inlineHelpText
  >Course custom question #1: Did this course meet your expectations?</inlineHelpText>
    <label>Q1: Did course meet your expectations?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>