force-app/main/default/objects/Contact_Enrollment__c/fields/Q2_Would_you_recommend_this_course__c.field-meta.xml
<CustomField>
    <fullName>Q2_Would_you_recommend_this_course__c</fullName>
    <description
  >Course custom question #2: Would you recommend this course to a colleague?</description>
    <inlineHelpText
  >Course custom question #2: Would you recommend this course to a colleague?</inlineHelpText>
    <label>Q2: Would you recommend this course?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>