force-app/main/default/objects/Contact_Enrollment__c/fields/Q3_Feel_more_confident_selling_to__c.field-meta.xml
<CustomField>
    <fullName>Q3_Feel_more_confident_selling_to__c</fullName>
    <description>Course custom question #3: 
SLG: Do you feel more confident selling to state and local government? 
EDU: Do you feel more confident selling to Education IT leaders</description>
    <inlineHelpText>Course custom question #3: 
SLG: Do you feel more confident selling to state and local government? 
EDU: Do you feel more confident selling to Education IT leaders</inlineHelpText>
    <label>Q3: Feel more confident selling to?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>