force-app/main/default/objects/Contact_Enrollment__c/fields/Q4_Do_you_have_additional_comments__c.field-meta.xml
<CustomField>
    <fullName>Q4_Do_you_have_additional_comments__c</fullName>
    <description
  >Course custom question #4: Do you have any additional comments?</description>
    <inlineHelpText
  >Course custom question #4: Do you have any additional comments?</inlineHelpText>
    <label>Q4: Do you have additional comments?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>