force-app/main/default/objects/Contact_Enrollment__c/fields/Reused_Existing_Badge__c.field-meta.xml
<CustomField>
    <fullName>Reused_Existing_Badge__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates that a Contact Enrollment took a different version of the same course once before and received the same badge a second time.</description>
    <label>Reused Existing Badge</label>
    <type>Checkbox</type>
</CustomField>