force-app/main/default/objects/Contact_Enrollment__c/fields/Standardized_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Standardized_Course_Name__c</fullName>
    <formula>Course__r.Standardized_Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standardized Course Name</label>
    <type>Text</type>
</CustomField>