force-app/main/default/objects/Contact_Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Unenrolled</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
                <isActive>false</isActive>
                <label>Absent</label>
            </value>
            <value>
                <fullName>Declined</fullName>
                <isActive>false</isActive>
                <label>Declined</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <isActive>false</isActive>
                <label>Failed</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Not Complete</fullName>
                <isActive>false</isActive>
                <label>Not Complete</label>
            </value>
            <value>
                <fullName>On Waitlist</fullName>
                <isActive>false</isActive>
                <label>On Waitlist</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Pending Evaluation Required</fullName>
                <isActive>false</isActive>
                <label>Pending Evaluation Required</label>
            </value>
            <value>
                <fullName>Pending Proctor</fullName>
                <isActive>false</isActive>
                <label>Pending Proctor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>