force-app/main/default/objects/Contact_Enrollment__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <description>Milliseconds</description>
    <label>Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>