force-app/main/default/objects/Contact_Enrollment__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <formula>Contact__r.Absorb_Username__c</formula>
    <label>Course Username</label>
    <type>Text</type>
</CustomField>